src/objects/Member_Comment__c.object
<CustomObject>
    <description>Comments intended to be visible to the member</description>
    <fields>
        <fullName>Attachment_Number__c</fullName>
        <label>Attachment Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BrandImage__c</fullName>
        <formula>Case__r.BrandImage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <formula>Case__r.BrandfromAccount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CU_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator set by workflow to signify that the comment was created by a CU representative.  This is needed to filter the roll up summary count of unread member comments.</description>
        <label>CU Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CU_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has an authorized MCS user reviewed the member&apos;s comment?</description>
        <inlineHelpText>Has an authorized MCS user reviewed the member&apos;s comment?</inlineHelpText>
        <label>CU Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Case_Creator_Email__c</fullName>
        <label>Case Creator Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Case_Creator_Name__c</fullName>
        <formula>Case__r.CreatedBy.FirstName  &amp; &apos; &apos;  &amp;    Case__r.CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Creator Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Origin__c</fullName>
        <description>Indication of who initiated/created the case. Member or CU</description>
        <formula>IF(   
    CONTAINS( Case__r.CreatedBy.Profile.Name , &apos;Messaging&apos;)  || 
    CONTAINS( Case__r.CreatedBy.Profile.Name , &apos;CU Customer&apos;)   , 
&apos;Member&apos;, &apos;CU&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Member Comments</relationshipLabel>
        <relationshipName>Member_Comments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <formula>Case__r.Category__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Origin__c</fullName>
        <description>Indication of who initiated/created the case. Member or CU</description>
        <formula>IF( 
    CONTAINS(  CreatedBy.Profile.Name , &apos;Messaging&apos;) || 
    CONTAINS(  CreatedBy.Profile.Name , &apos;CU Customer&apos;) , 
&apos;Member&apos;, 
&apos;CU&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indication of who initiated/created the case. Member or CU</inlineHelpText>
        <label>Communication Origin</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Device_Type__c</fullName>
        <label>Device Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Draft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsMarkRead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used to capture if the member has read the comment</description>
        <label>Member Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRead__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Comment__c</fullName>
        <label>Member Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Member_Communication__c</fullName>
        <label>Member Communication</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <label>Secure Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Member_Number__c</fullName>
        <formula>Case__r.Account_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>IF(  ISBLANK(Case__r.OwnerId)  , 
     Case__r.Owner:Queue.QueueName, 
     IF( Case__r.Owner:User.Profile.Name  = &apos;Messaging center Customers&apos;  || 
        Case__r.Owner:User.Profile.Name  = &apos;CU Customer Community Login&apos;    ,
         &apos;Member: &apos; &amp; Case_Creator_Name__c, 
             IF( Case__r.Queue_Owned__c = TRUE,
                 &apos;CU: &apos; &amp;  Case__r.Owner:Queue.QueueName, 
                  &apos;CU: &apos; &amp;    Case__r.Owner:User.FirstName &amp; &apos; &apos; &amp; Case__r.Owner:User.LastName   
               ) 

     ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Subject</label>
        <type>Text</type>
    </fields>
    <label>Member Comment</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Communication_Origin__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>IsMarkRead__c</columns>
        <columns>IsRead__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Attachment_Number__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Origin_CU</fullName>
        <columns>NAME</columns>
        <columns>Communication_Origin__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>IsMarkRead__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Communication_Origin__c</field>
            <operation>equals</operation>
            <value>CU</value>
        </filters>
        <label>Origin - CU</label>
    </listViews>
    <listViews>
        <fullName>Origin_CU_Unread</fullName>
        <columns>NAME</columns>
        <columns>Communication_Origin__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>IsMarkRead__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Communication_Origin__c</field>
            <operation>equals</operation>
            <value>CU</value>
        </filters>
        <filters>
            <field>IsMarkRead__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Origin - CU - Unread</label>
    </listViews>
    <listViews>
        <fullName>Origin_Member</fullName>
        <columns>NAME</columns>
        <columns>Member_Number__c</columns>
        <columns>Communication_Origin__c</columns>
        <columns>Subject__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>IsMarkRead__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Communication_Origin__c</field>
            <operation>equals</operation>
            <value>Member</value>
        </filters>
        <label>Origin - Member</label>
    </listViews>
    <listViews>
        <fullName>Origin_Member_Unread</fullName>
        <columns>NAME</columns>
        <columns>Communication_Origin__c</columns>
        <columns>Category__c</columns>
        <columns>Brand__c</columns>
        <columns>IsMarkRead__c</columns>
        <columns>Case__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Communication_Origin__c</field>
            <operation>equals</operation>
            <value>Member</value>
        </filters>
        <label>Origin - Member - Unread</label>
    </listViews>
    <nameField>
        <displayFormat>MCOM{000000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Member Comments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Internal_Cases_Not_Allowed</fullName>
        <active>false</active>
        <description>Due to a defect that is being worked on, adding member comments to a case that was not initiated by a member is not allowed at this time.</description>
        <errorConditionFormula>Case__r.Created_by_Portal_Member__c = FALSE</errorConditionFormula>
        <errorMessage>Due to a defect that is being worked on, adding member comments to a case that was not initiated by a member is not allowed at this time.</errorMessage>
    </validationRules>
</CustomObject>